--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         targetSdkVersion 23
         versionCode 6
         versionName "1.0.5"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -18,5 +19,9 @@ android {
 dependencies {
     implementation 'com.android.support:appcompat-v7:23.4.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:23.4.0'
+    implementation 'com.android.support:support-vector-drawable:23.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:design:23.4.0'
     testImplementation 'junit:junit:4.12'
 }
