--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 23
+    compileSdkVersion 27
     defaultConfig {
         applicationId "org.meowcat.gootool"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 6
-        versionName "1.0.5"
+        targetSdkVersion 27
+        versionCode 8
+        versionName "1.0.7"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -17,11 +17,12 @@ android {
     }
 }
 dependencies {
-    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:23.4.0'
-    implementation 'com.android.support:support-vector-drawable:23.4.0'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:design:23.4.0'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.zzhoujay.richtext:richtext:3.0.7'
     testImplementation 'junit:junit:4.12'
 }
