Navigation bar update.
Code cleanup.
Add About activity.
Remove save & install button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,6 @@
         <activity
             android:name=".OpenSourceLicencesActivity"
             android:label="@string/app_osl"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:parentActivityName=".MainActivity"/>
     </application>
-
 </manifest>
