--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,5 +39,14 @@
             android:name=".OpenSourceLicencesActivity"
             android:label="@string/app_osl"
             android:parentActivityName=".MainActivity"/>
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="org.meowcat.gootool.apkinstaller.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 </manifest>
