--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,52 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
+
 android {
-    compileSdkVersion 27
+
+    namespace "mobi.meow.android.gootool"
+    buildToolsVersion '33.0.0'
+    compileSdk 33
+
     defaultConfig {
-        applicationId "org.meowcat.gootool"
-        minSdkVersion 16
-        //noinspection OldTargetApi
-        targetSdkVersion 27
-        versionCode 8
-        versionName "1.0.7"
+        applicationId "mobi.meow.android.gootool"
+        minSdk 26
+        //noinspection ExpiredTargetSdkVersion
+        targetSdk 27
+        versionCode 11000
+        versionName "1.1.0"
         vectorDrawables.useSupportLibrary = true
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            outputFileName = "GooTool-${defaultConfig.versionName}-${defaultConfig.versionCode}-${applicationId}-${buildType.name}.apk"
+        }
+    }
+
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_16
+        targetCompatibility JavaVersion.VERSION_16
+    }
 }
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.zzhoujay.richtext:richtext:3.0.7'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.9.0'
 }
