--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,4 @@
-buildscript {
-    repositories {
-        jcenter()
-        google()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-    }
-}
-allprojects {
-    repositories {
-        mavenLocal()
-        jcenter()
-        google()
-    }
+plugins {
+    id 'com.android.application' version '8.0.2' apply false
+    id 'com.android.library' version '8.0.2' apply false
 }
